--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
-*{
+ *{
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 body{
-    color: #6B8E23;
+    color: #9fc552;
     background-color:  white;
     font: normal 18pt Times New Roman;
 }
@@ -19,6 +20,7 @@ body{
     background-color: #cfe3a8;
 }
 .topo{
+    background-image: url(imagens/header.jpg);
     background-position: 50% 40%;
     display: flex;
     flex-direction: column;
@@ -40,18 +42,50 @@ body{
     justify-content: space-between;
     padding: 8px;
     text-transform: uppercase;
+    color:white
 }
-.sessions-image {
+.product-container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 40px;
+    padding-bottom: 40px;
+}
+.product{
+    display: grid;
+    margin-bottom: 6px;
+}
+.product-image{
     width: 320px;
     height: 320px;
     margin-bottom: 20px;
-    padding: 12px;
+    padding: 15px;
+    
 }
-.title-median{
-    font-size: 24px;
-    margin: 12px;
+.product-title{
+    font-size: 20px; 
+    margin-bottom: 6px;
+    padding: 15px;
+    text-align: center;
 }
-
+.product-button{
+    width: 100%;
+    text-align: center;
+    padding: 15px;
+}
+.button{
+    background-color: #6B8E23;
+    color: #ebf5d8;
+    font-weight: bold;
+    cursor: cell;
+    padding: 16px 20px ;
+    border-style: solid;
+    border-color: #6B8E23;
+}
+.button:hover{
+    background-color: #2c3a0f;
+}
 .footer{
     text-align: center;
+    font-size: 15px;
 }
