--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
- *{
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto+Flex:opsz,wght@8..144,100..1000&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap'); *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -6,18 +6,18 @@
 body{
     color: #9fc552;
     background-color:  white;
-    font: normal 18pt Times New Roman;
 }
 .text {
     text-align:center;
     margin-bottom: 10px;
-    font-size: 30px;
+    font: 400 22px "Roboto Flex"; 
+    margin-top: 12px;
 }
-.title-large {
-    text-align: center;
-    margin-bottom: 10px;
-    font-size: 26px;
-    background-color: #cfe3a8;
+.text-large{
+    font: 400 24px "Work Sans";
+    text-align:center; 
+    color:#393c34;
+    margin-bottom: 12px;
 }
 .topo{
     background-image: url(imagens/header.jpg);
@@ -35,14 +35,22 @@ body{
 .menu {
     display: flex;
     list-style: none;
-
+    background-color:#d3f492;
 }
 .nav-item {
     text-align: center;
     justify-content: space-between;
-    padding: 8px;
+    padding: 6px;
     text-transform: uppercase;
-    color:white
+    color:#393c34;
+    font-size: 18px;
+    margin-left: auto;
+    margin-right: auto;
+    font: 400 22px "Bebas Neue";  
+
+}
+.nav-item:hover {
+    background-color: rgb(107, 137, 113);
 }
 .product-container{
     display: flex;
