--- a/style.css
+++ b/style.css
@@ -56,25 +56,25 @@ body{
 .nav-item:hover {
     background-color: rgb(107, 137, 113);
 }
-.product-container{
+.evidence-container{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     gap: 40px;
     padding-bottom: 40px;
 }
-.product{
+.evidence {
     display: grid;
     margin-bottom: 6px;
 }
-.product-image{
+.evidence-image{
     width: 320px;
     height: 320px;
     margin-bottom: 20px;
     padding: 15px;
     
 }
-.product-title{
+.evidence-title{
     font-size: 20px; 
     margin-bottom: 6px;
     padding: 15px;
@@ -100,4 +100,9 @@ body{
 .footer{
     text-align: center;
     font-size: 15px;
+}
+.img-product{
+    width: 350px;
+    height: 350px;
+    align-items: center;
 }
