--- a/style.css
+++ b/style.css
@@ -79,6 +79,7 @@ body{
     margin-bottom: 6px;
     padding: 15px;
     text-align: center;
+    font: 400 24px "Work Sans";
 }
 .product-button{
     width: 100%;
@@ -93,6 +94,7 @@ body{
     padding: 16px 20px ;
     border-style: solid;
     border-color: #6B8E23;
+    float: inherit;
 }
 .button:hover{
     background-color: #2c3a0f;
@@ -105,4 +107,30 @@ body{
     width: 350px;
     height: 350px;
     align-items: center;
+}
+.product-container{
+    display: grid;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 30px;
+    padding-bottom: 40px;
+}
+.zoom {
+    transition: transform 0.3s ease;
+}
+
+.zoom:hover {
+   transform:scale(1.2);
+}
+.title-product {
+    font: 400 22px "Work Sans";
+    text-align: center;
+}
+.title-median{
+    font: 400 24px "Work Sans";
+    text-align: center;
+    
+}
+.product-price{
+    
 }
