--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ body{
     justify-content: space-between;
     padding: 6px;
     text-transform: uppercase;
-     font-size: 18px;
+    font-size: 18px;
     margin-left: auto;
     margin-right: auto;
     font: 400 22px "Bebas Neue";  
@@ -109,11 +109,9 @@ body{
     align-items: center;
 }
 .product-container{
-    display: grid;
-    flex-wrap: wrap;
+    display:grid;
     justify-content: space-between;
-    gap: 30px;
-    padding-bottom: 40px;
+    padding-bottom: 20px;
 }
 .zoom {
     transition: transform 0.3s ease;
@@ -124,13 +122,19 @@ body{
 }
 .title-product {
     font: 400 22px "Work Sans";
-    text-align: center;
+    text-align: left;
 }
 .title-median{
-    font: 400 24px "Work Sans";
-    text-align: center;
-    
+    font: 400 20px "Work Sans";
+    text-align: left;
+}
+
+.price-container{
+   display: flex;
+   flex-direction: column;
+   text-align: center;
 }
 .product-price{
-    
+    align-items: center;
 }
+
